<resources>
    <string name="app_name">My Application</string>
    <string name="readDB">Read db</string>
    <string name="regUser">Зарегестрироваться</string>
    <string name="delUser">Del user</string>
    <string name="goToAuthor">Авторизация</string>
    <string name="logOut">Выйти</string>
    <string name="addServices">Добавить сервис</string>
    <string name="findServices">Найти сервис</string>
    <string name="profile">Профиль</string>

    //registration
    <string name="nameRegistration">Имя</string>
    <string name="surnameRegistration">Фамилия</string>
    <string name="cityRegistration">Город</string>
    <string name="phoneRegistration">Номер телефона</string>
    <string name="passwordRegistration">Пароль</string>
    <string name="logInRegistration">Войти</string>

    //Add service
    <string name="nameAddServiceTB">Имя</string>
    <string name="costAddServiceTB">Цена</string>
    <string name="main_screen">Главная страница</string>
    <string name="city">Город</string>
    <string name="phone">Телефон</string>

    //Edit service
    <string name="edit">Изменить</string>

    //Edit profile
    <string name="nameEditProfileInput">Имя</string>
    <string name="surnameEditProfileInput">Фамилия</string>

    //tag id
    <string name="selectedId">selectedId</string>
    <string name="yearId">yearId</string>


    <string name="BunBeauty">BunBeauty</string>
    <string name="hello_blank_fragment">hello blank fragment</string>
    <string name="status_worker">worker</string>
    <string name="empty_field">Не все поля заполнены</string>
    <string name="defult_value">-</string>
    <string name="empty_phone_field">Поле с номером телефона не может быть пустым</string>
    <string name="this_phone_is_already_usead">Этот номер телефона используется другим пользователем</string>
    <string name="BunB" />
    <string name="resendCode">Отправить код снова</string>
    <string name="verifyCode">Подтвердить код</string>
    <string name="enterCode">Введите код</string>
    <string name="canceled">Отказаться</string>
    <string name="Dialogs">Диалоги</string>

    //array for spinner
    <string-array name="cities">
        <item>Город</item>
        <item>dubna</item>
        <item>dmitrov</item>
        <item>taldom</item>
        <item>kimry</item>
    </string-array>

    <string-array name="searchBy">
        <item>название сервиса</item>
        <item>имя и фамилия</item>
    </string-array>


</resources>
